# rn-csca

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  RnCsca.podspec  eslint.config.mjs  package.json  tsconfig.build.json  tsconfig.json  ubrn.config.yaml
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: ci.yml  release.yml
RnCscaFramework.xcframework/: Info.plist
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
cpp/: lukachi-rn-csca.cpp  lukachi-rn-csca.h  rn-csca.cpp  rn-csca.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/RnCscaExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/RnCscaExample.xcodeproj/: project.pbxproj
example/ios/RnCscaExample.xcodeproj/xcshareddata/xcschemes/: RnCscaExample.xcscheme
example/ios/RnCscaExample.xcworkspace/: contents.xcworkspacedata
example/src/: App.tsx
ios/: RnCsca.h  RnCsca.mm
rust_modules/csca-parser/: Cargo.toml  README.md
rust_modules/csca-parser/assets/: public_keys.txt
rust_modules/csca-parser/examples/: demo_parser.rs  find_master_demo.rs  public_key_demo.rs  simple_treap_test.rs  test_parser.rs  test_pem_parser.rs  test_uniffi.rs  treap_demo.rs
rust_modules/csca-parser/src/: csca_parser.udl  error.rs  lib.rs  parser.rs  treap_tree.rs
rust_modules/csca-parser/tests/: integration_test.rs
src/: NativeRnCsca.ts  index.tsx
(+5 files in other folders)
