[package]
name = "csca-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "csca_parser"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
x509-parser = "0.15"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
regex = "1.0"
der-parser = "9.0"
cms = "0.2.3"
der = "0.7"
pem = "3.0"
uniffi = "0.29"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }

[dev-dependencies]
tokio-test = "0.4"
