[package]
name = "csca-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "csca_parser"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib", "staticlib"]

[dependencies]
x509-parser = "0.17.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
base64 = "0.22.1"
regex = "1.0"
der-parser = "9.0"
cms = "0.2.3"
der = "0.7"
pem = "3.0"
uniffi = "0.29"
num-bigint = "0.4"
num-traits = "0.2"
rsa = "0.9"
p256 = "0.13"
p384 = "0.13"
spki = "0.7"
elliptic-curve = "0.13"
sec1 = "0.7"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
